# CPUload-generator

./: README.md  example.py  global_half_hour_stats.csv  global_halfhour_stats.csv  pyproject.toml
cpu-generator/: generator.py
cpu_generator/: __init__.py  example.py
cpu_generator/dataset/: stats_weekly.csv
dataset/: stats_global.csv
